--- a/lista-operarios.html
+++ b/lista-operarios.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
 	<link rel="stylesheet" href="assets/css/list-style.css">
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 	<title>Operadores</title>
 </head>
 <body>
@@ -16,13 +17,15 @@
 		<nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
 			<div class="container">
 				<a class="navbar-brand logo" href="#"> <img src="assets/img/natural gas.svg" width="50" height="50"> Gasoductos</a>
-				<button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse"
 					id="navcol-1">
 					<ul class="nav navbar-nav ml-auto"></ul>
 				</div>
 				<ul class="nav navbar-nav ml-auto">
-					<li class="nav-item"><span class="glyphicon glyphicon-user"></span> Hola, @username</li>
+					<li class="nav-item"><span class="glyphicon glyphicon-user"></span> <span id="hiUser"> Hola, @username</span></li>
+					<li class="nav-item"><a href="#" class="float-right" id="registro" data-toggle="modal" data-target="#signUpEmployeeModal">
+						Registrar empleado
+						</a></li>
 					<li class="nav-item"><a href="index.html"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
 				</ul>
 			</div>
@@ -176,6 +179,47 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="modal fade" id="signUpEmployeeModal" tabindex="-1" role="dialog" aria-labelledby="signUpEmployeeModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="signUpEmployeeTitle">Registro empleado</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				  </button>
+					</div>
+					<div class="modal-body">
+						<form name="signUpEmployeeForm">
+							<div class="form-group">
+								<label for="nameEmployee">Nombre</label>
+								<input type="text" class="form-control" id="nameEmployee" name="nameEmployee" aria-describedby="Name" required>
+							</div>
+							<div class="form-group">
+								<label for="signUpEmployeeEmail">Correo electrónico <address></address></label>
+								<input type="text" class="form-control" id="signUpEmployeeEmail" name="signUpEmployeeEmail" aria-describedby="Name" required>
+							</div>
+							<div class="form-group">
+								<label for="addressEmployee">Dirección</label>
+								<input type="text" class="form-control" id="addressEmployee" name="addressEmployee" aria-describedby="Name">
+							</div>
+							<div class="form-group">
+								<label for="fotoEmployee">Imagen</label>
+								<input type="file" class="form-control" id="fotoEmployee" name="foto">
+							</div>
+							<div class="form-group">
+								<label for="passwdSignUpEmployee">Contraseña</label>
+								<input type="password" class="form-control" id="passwdSignUpEmployee" name="passwdSignUpEmployee" required>
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+						<button type="submit" id="signUpEmployee">Registrar</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</main>
 	<!-- Footer -->
 	<footer class="page-footer dark">
@@ -185,7 +229,28 @@
 	</footer>
   <!-- Footer -->
 
-  <script src="scripts/auth.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-firestore.js"></script>
+
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
+
+
+   <script src="scripts/auth.js"></script>
+
+    <script>
+		init_firebase();
+    </script>
   
 </body>
 </html>
