--- a/Empresa.html
+++ b/Empresa.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="assets/css/list-style.css">
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 	<script type="module" src="scripts/auth.js"></script>
@@ -20,7 +21,9 @@
 				<a class="navbar-brand logo" href="#"> <img src="assets/img/natural gas.svg" width="50" height="50"> Gasoductos</a>
 				<ul class="nav navbar-nav ml-auto">
 					<li class="nav-item" ><span class="glyphicon glyphicon-user"></span><span id="empresa" data-toggle="modal" data-target=".bd-example-modal-sm">Empresa</span></li>
+					<li> <div id="notification" class="notification"></div></li>
 				</ul>
+				
 				<div class="dropdown">
 					<button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Acciones
