Conexion de paginas y guardado de resultados

--- a/examen.html
+++ b/examen.html
@@ -15,7 +15,7 @@
 		<!--Navbar-->
 		<nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
 			<div class="container">
-				<a class="navbar-brand logo" href="lista-operarios.html"> <img src="assets/img/natural gas.svg" width="50" height="50"> Gasoductos</a>
+				<a class="navbar-brand logo" id="logo" href="#"> <img src="assets/img/natural gas.svg" width="50" height="50"> Gasoductos</a>
 				<button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse"
 					id="navcol-1">
