--- a/lista-encuestas.html
+++ b/lista-encuestas.html
@@ -22,7 +22,7 @@
 					<ul class="nav navbar-nav ml-auto"></ul>
 				</div>
 				<ul class="nav navbar-nav ml-auto">
-					<li class="nav-item"><span class="glyphicon glyphicon-user"></span> <span id="hiUser"> Hola, @username</span></li>
+					<li class="nav-item"><span class="glyphicon glyphicon-user"></span> <span id="hiUser"> Hola, empleado</span></li>
 					<li class="nav-item"><a href="index.html"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
 				</ul>
 			</div>
@@ -68,6 +68,7 @@
 											<th><span>Titulo</span></th>
 											<th><span>Tiempo estimado</span></th>
 											<th class="text-center"><span>Estado</span></th>
+											<th><span>Puntuación</span></th>
 										</tr>
 									</thead>
 									<tbody id="tabla_encuestas">
