--- a/resultados.html
+++ b/resultados.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
 		<link rel="stylesheet" href="assets/css/list-style.css">
-        <title>My first chart using FusionCharts Suite XT</title>
+        <title>Resultados</title>
         <!-- Include fusioncharts core library -->
         <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
         <!-- Include fusion theme -->
@@ -24,7 +24,7 @@
 						<ul class="nav navbar-nav ml-auto"></ul>
 					</div>
 					<ul class="nav navbar-nav ml-auto">
-						<li class="nav-item"><span class="glyphicon glyphicon-user"></span> <span id="hiUser"> Hola, @username</span></li>
+						<li class="nav-item"><span class="glyphicon glyphicon-user"></span> <span id="hiUser"> Hola, trabajador</span></li>
 						<li class="nav-item"><a href="index.html"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
 					</ul>
 				</div>
@@ -66,6 +66,10 @@
 		https://firebase.google.com/docs/web/setup#available-libraries -->
 		<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
 
+		<script src="scripts/auth.js"></script>
+		<script>
+			init_firebase();
+		</script>
 		<script src="scripts/resultados.js"></script>
 	
 	</body>
