Display foto y borrado de comentarios

--- a/lista-encuestas-jefe.html
+++ b/lista-encuestas-jefe.html
@@ -15,14 +15,14 @@
 		<!---->
 		<nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
 			<div class="container">
-				<a class="navbar-brand logo" href="#"> <img src="assets/img/natural gas.svg" width="50" height="50"> Gasoductos</a>
+				<a class="navbar-brand logo" href="Empresa.html"> <img src="assets/img/natural gas.svg" width="50" height="50"> Gasoductos</a>
 				<button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse"
 					id="navcol-1">
 					<ul class="nav navbar-nav ml-auto"></ul>
 				</div>
 				<ul class="nav navbar-nav ml-auto">
-					<li class="nav-item"><span class="glyphicon glyphicon-user"></span> <span id="hiUser"> Hola, @username</span></li>
+					<li class="nav-item"><span class="glyphicon glyphicon-user"></span> <span id="hiUser" data-toggle="modal" data-target=".bd-example-modal-sm"> Hola, @username</span></li>
 					<li class="nav-item"><a href="index.html"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
 				</ul>
 			</div>
@@ -41,15 +41,15 @@
 							<h3>Perfil</h3>
 							<div class="row">
 								<div class="col-sm-2 col-md-2">
-									<img src="/assets/img/gallina.png" alt="" class="img-rounded img-responsive" />
+									<img id="fotoPerfil" alt="" class="img-rounded img-responsive" />
 								</div>
 								<div class="col-sm-4 col-md-4">
 								</div>
 								<div class="col-sm-2 col-md-4">
 									<blockquote>
-										<p id="nombre_employee">Bruce Wayne</p> <small><cite id="cant_encuestas"title="Source Title">Gotham, United Kingdom  <i class="glyphicon glyphicon-map-marker"></i></cite></small>
+										<p id="Nombre_Empresa">Bruce Wayne</p> <small><cite id="cant_encuestas"title="Source Title">Gotham, United Kingdom  <i class="glyphicon glyphicon-map-marker"></i></cite></small>
 									</blockquote>
-									<p id="email_employee"> masterwayne@batman.com</p>
+									<p id="representante"> masterwayne@batman.com</p>
 								</div>
 							</div>
 						</div>
