--- a/lista-encuestas.html
+++ b/lista-encuestas.html
@@ -22,7 +22,7 @@
 					<ul class="nav navbar-nav ml-auto"></ul>
 				</div>
 				<ul class="nav navbar-nav ml-auto">
-					<li class="nav-item"><span class="glyphicon glyphicon-user"></span> <span id="hiUser"> Hola, empleado</span></li>
+					<li class="nav-item"><span class="glyphicon glyphicon-user"></span> <span id="hiUser" data-toggle="modal" data-target=".bd-example-modal-sm"> Hola, empleado</span></li>
 					<li class="nav-item"><a href="index.html"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
 				</ul>
 			</div>
@@ -41,15 +41,14 @@
 							<h3>Perfil</h3>
 							<div class="row">
 								<div class="col-sm-2 col-md-2">
-									<img src="/assets/img/gallina.png" alt="" class="img-rounded img-responsive" />
+									<img id="fotoPerfil" alt="" class="img-rounded img-responsive" />
 								</div>
 								<div class="col-sm-4 col-md-4">
 								</div>
 								<div class="col-sm-2 col-md-4">
 									<blockquote>
-										<p id="nombre_employee">Bruce Wayne</p> <small><cite id="cant_encuestas"title="Source Title">Gotham, United Kingdom  <i class="glyphicon glyphicon-map-marker"></i></cite></small>
+										<p id="nombre_employee">Bruce Wayne</p> <small><cite id="dir_employee"title="Source Title">Gotham, United Kingdom  <i class="glyphicon glyphicon-map-marker"></i></cite></small>
 									</blockquote>
-									<p id="email_employee"> masterwayne@batman.com</p>
 								</div>
 							</div>
 						</div>
