--- a/Empresa.html
+++ b/Empresa.html
@@ -181,7 +181,7 @@
 			<h3>Perfil</h3>
 			<div class="row">
 				<div class="col-sm-2 col-md-2">
-					<img src="/assets/img/gallina.png"
+					<img id="fotoPerfil"
 					alt="" class="img-rounded img-responsive" />
 				</div>
 				<div class="col-sm-4 col-md-4">
