--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                       </button>
                         </div>
                         <div class="modal-body">
-                            <form>
+                            <form id ="formSignUpEnterprise">
                                 <div class="form-group">
                                     <label for="nameUser">Nombre representante legal</label>
                                     <input type="text" class="form-control" id="nameUser" name="nameUser" aria-describedby="Name">
